--- a/app/src/main/res/layout/activity_calendario.xml
+++ b/app/src/main/res/layout/activity_calendario.xml
@@ -6,18 +6,6 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     tools:context=".CalendarioActivity">
 
-    <android.support.v7.widget.AppBar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/verde_logo_lfa"
-        android:id="@+id/main_toolbar">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="45dp"
-            android:src="@drawable/logo_lfa_sin_texto"
-            android:layout_gravity="center_horizontal" />
-    </android.support.v7.widget.AppBar>
 
     <android.support.v4.widget.DrawerLayout
         android:layout_width="match_parent"
@@ -57,5 +45,28 @@
             android:layout_gravity="start"
             android:layout_marginTop="?attr/actionBarSize"></ListView>
     </android.support.v4.widget.DrawerLayout>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/verde_logo_lfa">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/logo_lfa_sin_texto" />
+
+    </android.support.v7.widget.Toolbar>
+
+    <Spinner
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_alignBottom="@+id/main_toolbar"
+        android:layout_alignParentRight="true"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
