--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -2,8 +2,7 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".TeamsActivity">
+    android:layout_height="match_parent">
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
