--- a/app/src/main/res/layout/content_detalle_equipos.xml
+++ b/app/src/main/res/layout/content_detalle_equipos.xml
@@ -12,15 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="center"
-            app:tabMode="fixed"></android.support.design.widget.TabLayout>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout_calendario_roster"
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_centerHorizontal="true"
@@ -32,7 +26,7 @@
             android:id="@+id/viewPager_datos_complementarios"
             android:layout_width="match_parent"
             android:layout_height="500dp"
-            android:layout_below="@+id/tab_layout_calendario_roster"></android.support.v4.view.ViewPager>
+            android:layout_below="@+id/tab_layout"></android.support.v4.view.ViewPager>
 
     </RelativeLayout>
 
