--- a/app/src/main/res/layout/activity_teams_detail.xml
+++ b/app/src/main/res/layout/activity_teams_detail.xml
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
-            ads:adUnitId="@string/test_ad_unit_id"></com.google.android.gms.ads.AdView>
+            ads:adUnitId="@string/test_ad_unit_id" />
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
