--- a/app/src/main/res/layout/content_detalle_equipos.xml
+++ b/app/src/main/res/layout/content_detalle_equipos.xml
@@ -5,29 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.proyectofootball.titanes.lfa.TeamsDetailActivity"
     tools:showIn="@layout/activity_detalle_equipos">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <android.support.design.widget.TabLayout
-            android:id="@+id/tab_layout"
+            android:id="@+id/tab_layout_calendario_roster"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_centerHorizontal="true"
-            android:fitsSystemWindows="true"
+            android:layout_height="wrap_content"
             app:tabGravity="center"
-            app:tabMode="fixed"></android.support.design.widget.TabLayout>
+            app:tabMode="fixed" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager_datos_complementarios"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_below="@+id/tab_layout"></android.support.v4.view.ViewPager>
-
+            android:layout_height="460dp"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/tab_layout_calendario_roster" />
     </RelativeLayout>
 
 </android.support.v4.widget.NestedScrollView>
