--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">@color/verde_logo_lfa</item>
         <item name="colorAccent">@color/rojo_logo_lfa</item>
         <item name="windowNoTitle">true</item>
+        <item name="colorControlNormal">@color/blanco</item>
 
     </style>
 
