Se sube cambio con el calendario y rosters de equipo, también se resolvió problema con los videos embebidos

--- a/app/src/main/res/layout/activity_news_text.xml
+++ b/app/src/main/res/layout/activity_news_text.xml
@@ -76,5 +76,5 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/test_ad_unit_id" />
+        ads:adUnitId="@string/news_detail_unit_id" />
 </RelativeLayout>
