--- a/app/src/main/res/layout/activity_standings.xml
+++ b/app/src/main/res/layout/activity_standings.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -417,7 +418,16 @@
                     </TableRow>
                 </TableLayout>
             </HorizontalScrollView>
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="@string/standings_unit_id"></com.google.android.gms.ads.AdView>
         </RelativeLayout>
+
 
         <ListView
             android:id="@+id/lv_sliding_menu"
