--- a/app/src/main/res/layout/activity_calendario.xml
+++ b/app/src/main/res/layout/activity_calendario.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 ads:adSize="BANNER"
-                ads:adUnitId="@string/test_ad_unit_id"></com.google.android.gms.ads.AdView>
+                ads:adUnitId="@string/calendar_unit_id"></com.google.android.gms.ads.AdView>
         </RelativeLayout>
 
         <ListView
