--- a/app/src/main/res/layout/activity_news_video_text.xml
+++ b/app/src/main/res/layout/activity_news_video_text.xml
@@ -29,5 +29,5 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/test_ad_unit_id" />
+        ads:adUnitId="@string/news_video_text_banner_unit_id" />
 </RelativeLayout>
